Add brack bars to Idris ligation

--- a/params/ligation-set.toml
+++ b/params/ligation-set.toml
@@ -497,7 +497,10 @@ buildup = [
 [composite.idris]
 tag     = 'IDRS'
 desc    = 'Idris'
-buildup = [ 'haskell' ]
+buildup = [
+	'haskell',
+	'brack-bar',
+]
 
 [composite.elm]
 tag     = 'ELMX'
