--- a/.github/workflows/pr-build-validation.yml
+++ b/.github/workflows/pr-build-validation.yml
@@ -56,7 +56,7 @@ jobs:
   build:
     name: Build ${{ matrix.fontName }} font
     needs: bump_version_check
-    if: github.repository == 'be5invis/Iosevka' && github.base_ref == 'dev' && needs.bump_version_check.outputs.changed == '0'
+    if: github.repository == 'be5invis/Iosevka'
     runs-on: ubuntu-latest
 
     strategy:
