--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2139,8 +2139,8 @@ selectorAffix."a/rtailBase" = "doubleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
-selectorAffix."scripta/autoSerifed/slab" = "singleStorey"
-selectorAffix."scripta/autoSerifed/sans" = "singleStorey"
+selectorAffix."aScript/autoSerifed/slab" = "singleStorey"
+selectorAffix."aScript/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.storey.single-storey]
 rank = 2
@@ -2153,8 +2153,8 @@ selectorAffix."a/rtailBase" = "singleStorey"
 selectorAffix."a/turnABase" = "doubleStorey"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "singleStorey"
-selectorAffix."scripta/autoSerifed/slab" = "singleStorey"
-selectorAffix."scripta/autoSerifed/sans" = "singleStorey"
+selectorAffix."aScript/autoSerifed/slab" = "singleStorey"
+selectorAffix."aScript/autoSerifed/sans" = "singleStorey"
 
 [prime.a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
@@ -2170,8 +2170,8 @@ selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."scripta/autoSerifed/slab" = ""
-selectorAffix."scripta/autoSerifed/sans" = ""
+selectorAffix."aScript/autoSerifed/slab" = ""
+selectorAffix."aScript/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
@@ -2184,8 +2184,8 @@ selectorAffix."a/rtailBase" = "hookInwardSerifed"
 selectorAffix."a/turnABase" = "hookInwardSerifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."scripta/autoSerifed/slab" = ""
-selectorAffix."scripta/autoSerifed/sans" = ""
+selectorAffix."aScript/autoSerifed/slab" = ""
+selectorAffix."aScript/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear."*"]
 next = "bar"
@@ -2200,8 +2200,8 @@ selectorAffix."a/rtailBase" = ""
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = ""
 selectorAffix."a/singleStorey/autoSerifed/sans" = ""
-selectorAffix."scripta/autoSerifed/slab" = ""
-selectorAffix."scripta/autoSerifed/sans" = ""
+selectorAffix."aScript/autoSerifed/slab" = ""
+selectorAffix."aScript/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear.earless-corner]
 rank = 2
@@ -2213,8 +2213,8 @@ selectorAffix."a/rtailBase" = "earlessCorner"
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessCorner"
-selectorAffix."scripta/autoSerifed/slab" = ""
-selectorAffix."scripta/autoSerifed/sans" = ""
+selectorAffix."aScript/autoSerifed/slab" = ""
+selectorAffix."aScript/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.ear.earless-rounded]
 rank = 3
@@ -2226,8 +2226,8 @@ selectorAffix."a/rtailBase" = "earlessRounded"
 selectorAffix."a/turnABase" = ""
 selectorAffix."a/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "earlessRounded"
-selectorAffix."scripta/autoSerifed/slab" = ""
-selectorAffix."scripta/autoSerifed/sans" = ""
+selectorAffix."aScript/autoSerifed/slab" = ""
+selectorAffix."aScript/autoSerifed/sans" = ""
 
 [prime.a.variants-buildup.stages.bar.serifless]
 rank = 1
@@ -2240,8 +2240,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."scripta/autoSerifed/slab" = "serifless"
-selectorAffix."scripta/autoSerifed/sans" = "serifless"
+selectorAffix."aScript/autoSerifed/slab" = "serifless"
+selectorAffix."aScript/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.serifed]
 rank = 2
@@ -2253,8 +2253,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "doubleSerifed", else = "serifed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifed"
-selectorAffix."scripta/autoSerifed/slab" = "serifed"
-selectorAffix."scripta/autoSerifed/sans" = "serifed"
+selectorAffix."aScript/autoSerifed/slab" = "serifed"
+selectorAffix."aScript/autoSerifed/sans" = "serifed"
 
 [prime.a.variants-buildup.stages.bar.double-serifed]
 rank = 3
@@ -2267,8 +2267,8 @@ selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "serifed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "doubleSerifed"
-selectorAffix."scripta/autoSerifed/slab" = "serifed"
-selectorAffix."scripta/autoSerifed/sans" = "serifed"
+selectorAffix."aScript/autoSerifed/slab" = "serifed"
+selectorAffix."aScript/autoSerifed/sans" = "serifed"
 
 [prime.a.variants-buildup.stages.bar.tailed]
 rank = 4
@@ -2280,8 +2280,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = { if = [{ storey = "double-storey" }], then = "tailedSerifed", else = "tailed" }
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailed"
-selectorAffix."scripta/autoSerifed/slab" = "tailed"
-selectorAffix."scripta/autoSerifed/sans" = "tailed"
+selectorAffix."aScript/autoSerifed/slab" = "tailed"
+selectorAffix."aScript/autoSerifed/sans" = "tailed"
 
 [prime.a.variants-buildup.stages.bar.tailed-serifed]
 rank = 5
@@ -2294,8 +2294,8 @@ selectorAffix."a/rtailBase" = "topSerifed"
 selectorAffix."a/turnABase" = "tailed"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "tailedSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "tailedSerifed"
-selectorAffix."scripta/autoSerifed/slab" = "tailed"
-selectorAffix."scripta/autoSerifed/sans" = "tailed"
+selectorAffix."aScript/autoSerifed/slab" = "tailed"
+selectorAffix."aScript/autoSerifed/sans" = "tailed"
 
 [prime.a.variants-buildup.stages.bar.toothless-corner]
 rank = 6
@@ -2308,8 +2308,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessCorner"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."scripta/autoSerifed/slab" = "serifed"
-selectorAffix."scripta/autoSerifed/sans" = "serifless"
+selectorAffix."aScript/autoSerifed/slab" = "serifed"
+selectorAffix."aScript/autoSerifed/sans" = "serifless"
 
 [prime.a.variants-buildup.stages.bar.toothless-rounded]
 rank = 7
@@ -2322,8 +2322,8 @@ selectorAffix."a/rtailBase" = "serifless"
 selectorAffix."a/turnABase" = "toothlessRounded"
 selectorAffix."a/singleStorey/autoSerifed/slab" = "doubleSerifed"
 selectorAffix."a/singleStorey/autoSerifed/sans" = "serifless"
-selectorAffix."scripta/autoSerifed/slab" = "serifed"
-selectorAffix."scripta/autoSerifed/sans" = "serifless"
+selectorAffix."aScript/autoSerifed/slab" = "serifed"
+selectorAffix."aScript/autoSerifed/sans" = "serifless"
 
 
 
@@ -2766,9 +2766,9 @@ descriptionAffix = "double-storey shape"
 selectorAffix.g = "doubleStorey"
 selectorAffix."g/sansSerif" = "doubleStorey"
 selectorAffix."g/hookTopBase" = "singleStoreySerifless"
-selectorAffix."gScript" = "singleStoreyScriptCut"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStoreySerifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStoreySerifless"
+selectorAffix.gScript = "singleStoreyScriptCut"
 
 [prime.g.variants-buildup.stages.openness."*"]
 next = "END"
@@ -2779,9 +2779,9 @@ keyAffix = ""
 selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
-selectorAffix."gScript" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
+selectorAffix.gScript = ""
 
 [prime.g.variants-buildup.stages.openness.open]
 rank = 1
@@ -2789,9 +2789,9 @@ descriptionAffix = "open contour"
 selectorAffix.g = "open"
 selectorAffix."g/sansSerif" = "open"
 selectorAffix."g/hookTopBase" = ""
-selectorAffix."gScript" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
+selectorAffix.gScript = ""
 
 [prime.g.variants-buildup.stages.storey.single-storey]
 next = "hook"
@@ -2800,9 +2800,9 @@ descriptionAffix = "single-storey shape"
 selectorAffix.g = "singleStorey"
 selectorAffix."g/sansSerif" = "singleStorey"
 selectorAffix."g/hookTopBase" = "singleStorey"
-selectorAffix."gScript" = "singleStorey"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "singleStorey"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "singleStorey"
+selectorAffix.gScript = "singleStorey"
 
 [prime.g.variants-buildup.stages.hook."*"]
 next = "ear"
@@ -2813,9 +2813,9 @@ keyAffix = ""
 selectorAffix.g = ""
 selectorAffix."g/sansSerif" = ""
 selectorAffix."g/hookTopBase" = ""
-selectorAffix."gScript" = ""
 selectorAffix."g/singleStorey/autoSerifed/slab" = ""
 selectorAffix."g/singleStorey/autoSerifed/sans" = ""
+selectorAffix.gScript = ""
 
 [prime.g.variants-buildup.stages.hook.flat-hook]
 rank = 2
@@ -2823,18 +2823,18 @@ descriptionAffix = "flat bottom hook"
 selectorAffix.g = "flatHook"
 selectorAffix."g/sansSerif" = "flatHook"
 selectorAffix."g/hookTopBase" = "flatHook"
-selectorAffix."gScript" = "flatHook"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "flatHook"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "flatHook"
+selectorAffix.gScript = "flatHook"
 
 [prime.g.variants-buildup.stages.ear.serifless]
 rank = 1
 selectorAffix.g = "serifless"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
-selectorAffix."gScript" = "scriptCut"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifless"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifless"
+selectorAffix.gScript = "scriptCut"
 
 [prime.g.variants-buildup.stages.ear.serifed]
 rank = 2
@@ -2842,9 +2842,9 @@ descriptionAffix = "top-right serif"
 selectorAffix.g = "serifed"
 selectorAffix."g/sansSerif" = "serifless"
 selectorAffix."g/hookTopBase" = "serifless"
-selectorAffix."gScript" = "scriptCut"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "serifed"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "serifed"
+selectorAffix.gScript = "scriptCut"
 
 [prime.g.variants-buildup.stages.ear.earless-corner]
 rank = 3
@@ -2852,9 +2852,9 @@ descriptionAffix = "earless (cornered top-right)"
 selectorAffix.g = "earlessCorner"
 selectorAffix."g/sansSerif" = "earlessCorner"
 selectorAffix."g/hookTopBase" = "earlessCornerHTB"
-selectorAffix."gScript" = "scriptCut"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessCorner"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessCorner"
+selectorAffix.gScript = "scriptCut"
 
 [prime.g.variants-buildup.stages.ear.earless-rounded]
 rank = 4
@@ -2862,9 +2862,9 @@ descriptionAffix = "earless (rounded top-right)"
 selectorAffix.g = "earlessRounded"
 selectorAffix."g/sansSerif" = "earlessRounded"
 selectorAffix."g/hookTopBase" = "serifless"
-selectorAffix."gScript" = "scriptCut"
 selectorAffix."g/singleStorey/autoSerifed/slab" = "earlessRounded"
 selectorAffix."g/singleStorey/autoSerifed/sans" = "earlessRounded"
+selectorAffix.gScript = "scriptCut"
 
 
 
