More cleanup + optimize memory use of geometry cache

--- a/packages/geometry/package.json
+++ b/packages/geometry/package.json
@@ -12,7 +12,8 @@
     "./transform": "./src/transform.mjs",
     "./spiro-control": "./src/spiro-control.mjs",
     "./spiro-expand": "./src/spiro-expand.mjs",
-    "./spiro-pen-expand": "./src/spiro-pen-expand.mjs"
+    "./spiro-pen-expand": "./src/spiro-pen-expand.mjs",
+    "./encoding": "./src/encoding.mjs"
   },
   "dependencies": {
     "@iosevka/util": "32.0.2",
