--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4239,7 +4239,7 @@ descriptionAffix = "normal body shape"
 selectorAffix.r = ""
 selectorAffix."r/sansSerif" = ""
 selectorAffix.rRTail = ""
-selectorAffix."rTurnRTail" = ""
+selectorAffix."r/ascBase" = ""
 selectorAffix."rFlap" = "earlessRounded"
 
 [prime.r.variants-buildup.stages.body.earless-corner]
@@ -4249,7 +4249,7 @@ descriptionAffix = "earless (corner top-left) body shape"
 selectorAffix.r = "earlessCorner"
 selectorAffix."r/sansSerif" = "earlessCorner"
 selectorAffix.rRTail = "earlessCorner"
-selectorAffix."rTurnRTail" = ""
+selectorAffix."r/ascBase" = ""
 selectorAffix."rFlap" = "earlessRounded"
 
 [prime.r.variants-buildup.stages.body.earless-rounded]
@@ -4259,7 +4259,7 @@ descriptionAffix = "earless (rounded top-left) body shape"
 selectorAffix.r = "earlessRounded"
 selectorAffix."r/sansSerif" = "earlessRounded"
 selectorAffix.rRTail = "earlessRounded"
-selectorAffix."rTurnRTail" = ""
+selectorAffix."r/ascBase" = ""
 selectorAffix."rFlap" = "earlessRounded"
 
 [prime.r.variants-buildup.stages.body.hookless]
@@ -4268,7 +4268,7 @@ descriptionAffix = "hookless body shape"
 selectorAffix.r = "hookless"
 selectorAffix."r/sansSerif" = "hookless"
 selectorAffix.rRTail = "hookless"
-selectorAffix."rTurnRTail" = "hookless"
+selectorAffix."r/ascBase" = "hookless"
 selectorAffix."rFlap" = "hooklessFlap"
 
 [prime.r.variants-buildup.stages.body.corner-hooked]
@@ -4277,7 +4277,7 @@ descriptionAffix = "corner-hooked body shape"
 selectorAffix.r = "cornerHooked"
 selectorAffix."r/sansSerif" = "hookless"
 selectorAffix.rRTail = "cornerHooked"
-selectorAffix."rTurnRTail" = "cornerHooked"
+selectorAffix."r/ascBase" = "cornerHooked"
 selectorAffix."rFlap" = "hooklessFlap"
 
 [prime.r.variants-buildup.stages.body.compact]
@@ -4286,7 +4286,7 @@ descriptionAffix = "compact body shape (identical to 'hookless' for monospace fo
 selectorAffix.r = "compact"
 selectorAffix."r/sansSerif" = "compact"
 selectorAffix.rRTail = "compact"
-selectorAffix."rTurnRTail" = "compact"
+selectorAffix."r/ascBase" = "compact"
 selectorAffix."rFlap" = "compactFlap"
 
 [prime.r.variants-buildup.stages.serifs.serifless]
@@ -4296,7 +4296,7 @@ descriptionAffix = "serifs"
 selectorAffix.r = "serifless"
 selectorAffix."r/sansSerif" = "serifless"
 selectorAffix.rRTail = "serifless"
-selectorAffix."rTurnRTail" = "serifless"
+selectorAffix."r/ascBase" = "serifless"
 selectorAffix."rFlap" = "serifless"
 
 [prime.r.variants-buildup.stages.serifs.top-serifed]
@@ -4306,7 +4306,7 @@ descriptionAffix = "serif at top"
 selectorAffix.r = "topSerifed"
 selectorAffix."r/sansSerif" = "serifless"
 selectorAffix.rRTail = "topSerifed"
-selectorAffix."rTurnRTail" = "serifless"
+selectorAffix."r/ascBase" = "serifless"
 selectorAffix."rFlap" = "serifless"
 
 [prime.r.variants-buildup.stages.serifs.base-serifed]
@@ -4316,7 +4316,7 @@ descriptionAffix = "serif at bottom"
 selectorAffix.r = "baseSerifed"
 selectorAffix."r/sansSerif" = "serifless"
 selectorAffix.rRTail = "serifless"
-selectorAffix."rTurnRTail" = "serifed"
+selectorAffix."r/ascBase" = "serifed"
 selectorAffix."rFlap" = "serifed"
 
 [prime.r.variants-buildup.stages.serifs.serifed]
@@ -4325,7 +4325,7 @@ descriptionAffix = "serifs"
 selectorAffix.r = "serifed"
 selectorAffix."r/sansSerif" = "serifless"
 selectorAffix.rRTail = {if =  [{body="earless-corner"}, {body="earless-rounded"}], then = "serifless", else = "topSerifed"}
-selectorAffix."rTurnRTail" = "serifed"
+selectorAffix."r/ascBase" = "serifed"
 selectorAffix."rFlap" = "serifed"
 
 
