--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3469,8 +3469,8 @@ selector.l = "serifless"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "hooky"
 selector."l/reduced/decompress" = "seriflessDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3483,8 +3483,8 @@ selector.l = "hooky"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "hooky"
 selector."l/reduced/decompress" = "hookyDec"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3497,8 +3497,8 @@ selector.l = "hookyBottom"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "zshaped"
 selector."l/reduced/decompress" = "hookyBottomDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3511,8 +3511,8 @@ selector.l = "zshaped"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "zshaped"
 selector."l/reduced/decompress" = "zshaped"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3525,8 +3525,8 @@ selector.l = "serifed"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "serifed"
 selector."l/reduced/decompress" = "serifed"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3539,8 +3539,8 @@ selector.l = "serifedAsymmetric"
 selector."l/sansSerif" = "serifless"
 selector."l/compLigRight" = "serifed"
 selector."l/reduced/decompress" = "serifedAsymmetric"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3553,8 +3553,8 @@ selector.l = "tailed"
 selector."l/sansSerif" = "tailed"
 selector."l/compLigRight" = "tailedSerifed"
 selector."l/reduced/decompress" = "tailedDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3567,8 +3567,8 @@ selector.l = "tailedSerifed"
 selector."l/sansSerif" = "tailed"
 selector."l/compLigRight" = "tailedSerifed"
 selector."l/reduced/decompress" = "tailedSerifed"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3581,8 +3581,8 @@ selector.l = "flatTailed"
 selector."l/sansSerif" = "flatTailed"
 selector."l/compLigRight" = "serifedFlatTailed"
 selector."l/reduced/decompress" = "flatTailedDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3595,8 +3595,8 @@ selector.l = "serifedFlatTailed"
 selector."l/sansSerif" = "flatTailed"
 selector."l/compLigRight" = "serifedFlatTailed"
 selector."l/reduced/decompress" = "serifedFlatTailed"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3609,8 +3609,8 @@ selector.l = "diagonalTailed"
 selector."l/sansSerif" = "diagonalTailed"
 selector."l/compLigRight" = "serifedDiagonalTailed"
 selector."l/reduced/decompress" = "diagonalTailedDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3623,8 +3623,8 @@ selector.l = "serifedDiagonalTailed"
 selector."l/sansSerif" = "diagonalTailed"
 selector."l/compLigRight" = "serifedDiagonalTailed"
 selector."l/reduced/decompress" = "serifedDiagonalTailed"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
@@ -3637,8 +3637,8 @@ selector.l = "semiTailed"
 selector."l/sansSerif" = "semiTailed"
 selector."l/compLigRight" = "serifedSemiTailed"
 selector."l/reduced/decompress" = "semiTailedDec"
-selector."l/reduced/rtail" = "seriflessRTail"
-selector."l/reduced/rtailDec" = "seriflessRTailDec"
+selector.lRTail = "seriflessRTail"
+selector."lRTail/reduced/decompress" = "seriflessRTailDec"
 selector."l/phoneticLeft" = "seriflessPL"
 selector.lCurlyTail = "serifless"
 selector.lyogh = "serifless"
@@ -3651,8 +3651,8 @@ selector.l = "serifedSemiTailed"
 selector."l/sansSerif" = "semiTailed"
 selector."l/compLigRight" = "serifedSemiTailed"
 selector."l/reduced/decompress" = "serifedSemiTailed"
-selector."l/reduced/rtail" = "hookyRTail"
-selector."l/reduced/rtailDec" = "hookyRTailDec"
+selector.lRTail = "hookyRTail"
+selector."lRTail/reduced/decompress" = "hookyRTailDec"
 selector."l/phoneticLeft" = "hookyPL"
 selector.lCurlyTail = "hooky"
 selector.lyogh = "hooky"
