Unify Cyrillic Uk derived characters (`Ѹ`, `ѹ`, `Ꙋ`, `ᲈ`).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1783,7 +1783,6 @@ descriptionAffix = "straight shape"
 selectorAffix.V = "straight"
 selectorAffix."V/sansSerif" = "straight"
 selectorAffix.VScript = ""
-selectorAffix."cyrl/Izhitsa" = "straight"
 
 [prime.capital-v.variants-buildup.stages.body.curly]
 rank = 2
@@ -1791,7 +1790,6 @@ descriptionAffix = "curly shape"
 selectorAffix.V = "curly"
 selectorAffix."V/sansSerif" = "curly"
 selectorAffix.VScript = ""
-selectorAffix."cyrl/Izhitsa" = "curly"
 
 [prime.capital-v.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1800,7 +1798,6 @@ descriptionJoiner = "without"
 selectorAffix.V = "serifless"
 selectorAffix."V/sansSerif" = "serifless"
 selectorAffix.VScript = "serifless"
-selectorAffix."cyrl/Izhitsa" = "serifless"
 
 [prime.capital-v.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
@@ -1808,7 +1805,6 @@ descriptionAffix = "motion serifs"
 selectorAffix.V = "motionSerifed"
 selectorAffix."V/sansSerif" = "serifless"
 selectorAffix.VScript = "motionSerifed"
-selectorAffix."cyrl/Izhitsa" = "motionSerifed"
 
 [prime.capital-v.variants-buildup.stages.serifs.serifed]
 rank = 3
@@ -1816,7 +1812,6 @@ descriptionAffix = "serifs"
 selectorAffix.V = "serifed"
 selectorAffix."V/sansSerif" = "serifless"
 selectorAffix.VScript = "serifed"
-selectorAffix."cyrl/Izhitsa" = "serifed"
 
 
 
@@ -4783,7 +4778,6 @@ selectorAffix."v/sansSerif" = "straight"
 selectorAffix.vScript = ""
 selectorAffix.vHookRight = "straight"
 selectorAffix.vLoop = "straight"
-selectorAffix."cyrl/izhitsa" = "straight"
 
 [prime.v.variants-buildup.stages.body.curly]
 rank = 2
@@ -4793,7 +4787,6 @@ selectorAffix."v/sansSerif" = "curly"
 selectorAffix.vScript = ""
 selectorAffix.vHookRight = "curly"
 selectorAffix.vLoop = "curly"
-selectorAffix."cyrl/izhitsa" = "curly"
 
 [prime.v.variants-buildup.stages.body.cursive]
 rank = 3
@@ -4803,7 +4796,6 @@ selectorAffix."v/sansSerif" = "cursive"
 selectorAffix.vScript = ""
 selectorAffix.vHookRight = "straight"
 selectorAffix.vLoop = "straight"
-selectorAffix."cyrl/izhitsa" = "straight"
 
 [prime.v.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4814,7 +4806,6 @@ selectorAffix."v/sansSerif" = "serifless"
 selectorAffix.vScript = "serifless"
 selectorAffix.vHookRight = "serifless"
 selectorAffix.vLoop = "serifless"
-selectorAffix."cyrl/izhitsa" = "serifless"
 
 [prime.v.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
@@ -4825,7 +4816,6 @@ selectorAffix."v/sansSerif" = "serifless"
 selectorAffix.vScript = "motionSerifed"
 selectorAffix.vHookRight = "motionSerifed"
 selectorAffix.vLoop = "serifless"
-selectorAffix."cyrl/izhitsa" = "motionSerifed"
 
 [prime.v.variants-buildup.stages.serifs.serifed]
 rank = 3
@@ -4835,7 +4825,6 @@ selectorAffix."v/sansSerif" = "serifless"
 selectorAffix.vScript = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 selectorAffix.vHookRight = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 selectorAffix.vLoop = {if = [{body = "cursive"}], then = "serifless", else = "serifed"}
-selectorAffix."cyrl/izhitsa" = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 
 
 
@@ -7574,18 +7563,21 @@ next = "hook"
 rank = 1
 descriptionAffix = "straight shape"
 selectorAffix."cyrl/U" = "straight"
+selectorAffix."cyrl/Izhitsa" = "straight"
 selectorAffix."cyrl/Ue" = "straight"
 
 [prime.cyrl-capital-u.variants-buildup.stages.body.curly]
 rank = 2
 descriptionAffix = "curly shape"
 selectorAffix."cyrl/U" = "curly"
+selectorAffix."cyrl/Izhitsa" = "curly"
 selectorAffix."cyrl/Ue" = "curly"
 
 [prime.cyrl-capital-u.variants-buildup.stages.body.cursive]
 rank = 3
 descriptionAffix = "cursive shape"
 selectorAffix."cyrl/U" = "cursive"
+selectorAffix."cyrl/Izhitsa" = "straight"
 selectorAffix."cyrl/Ue" = "straight"
 
 [prime.cyrl-capital-u.variants-buildup.stages.hook."*"]
@@ -7595,6 +7587,7 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/U" = ""
+selectorAffix."cyrl/Izhitsa" = ""
 selectorAffix."cyrl/Ue" = ""
 
 [prime.cyrl-capital-u.variants-buildup.stages.hook.turn]
@@ -7602,6 +7595,7 @@ rank = 2
 disableIf = [{ body = "cursive" }]
 descriptionAffix = "a tail turns leftward"
 selectorAffix."cyrl/U" = "turn"
+selectorAffix."cyrl/Izhitsa" = ""
 selectorAffix."cyrl/Ue" = ""
 
 [prime.cyrl-capital-u.variants-buildup.stages.hook.flat-hook]
@@ -7609,6 +7603,7 @@ rank = 3
 disableIf = [{ body = "NOT cursive" }]
 descriptionAffix = "a flat terminal hook"
 selectorAffix."cyrl/U" = "flatHook"
+selectorAffix."cyrl/Izhitsa" = ""
 selectorAffix."cyrl/Ue" = ""
 
 [prime.cyrl-capital-u.variants-buildup.stages.serifs.serifless]
@@ -7616,18 +7611,21 @@ rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/U" = "serifless"
+selectorAffix."cyrl/Izhitsa" = "serifless"
 selectorAffix."cyrl/Ue" = "serifless"
 
 [prime.cyrl-capital-u.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs"
 selectorAffix."cyrl/U" = "motionSerifed"
+selectorAffix."cyrl/Izhitsa" = "motionSerifed"
 selectorAffix."cyrl/Ue" = "motionSerifed"
 
 [prime.cyrl-capital-u.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/U" = "serifed"
+selectorAffix."cyrl/Izhitsa" = "serifed"
 selectorAffix."cyrl/Ue" = "serifed"
 
 
@@ -7648,18 +7646,24 @@ next = "hook"
 rank = 1
 descriptionAffix = "straight shape"
 selectorAffix."cyrl/u" = "straight"
+selectorAffix."cyrl/u/nonCursive" = "straight"
+selectorAffix."cyrl/izhitsa" = "straight"
 selectorAffix."cyrl/ue" = "straight"
 
 [prime.cyrl-u.variants-buildup.stages.body.curly]
 rank = 2
 descriptionAffix = "curly shape"
 selectorAffix."cyrl/u" = "curly"
+selectorAffix."cyrl/u/nonCursive" = "curly"
+selectorAffix."cyrl/izhitsa" = "curly"
 selectorAffix."cyrl/ue" = "curly"
 
 [prime.cyrl-u.variants-buildup.stages.body.cursive]
 rank = 3
 descriptionAffix = "cursive shape"
 selectorAffix."cyrl/u" = "cursive"
+selectorAffix."cyrl/u/nonCursive" = "straight"
+selectorAffix."cyrl/izhitsa" = "straight"
 selectorAffix."cyrl/ue" = "straight"
 
 [prime.cyrl-u.variants-buildup.stages.hook."*"]
@@ -7669,6 +7673,8 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/u" = ""
+selectorAffix."cyrl/u/nonCursive" = ""
+selectorAffix."cyrl/izhitsa" = ""
 selectorAffix."cyrl/ue" = ""
 
 [prime.cyrl-u.variants-buildup.stages.hook.turn]
@@ -7676,6 +7682,8 @@ rank = 2
 disableIf = [{ body = "cursive" }]
 descriptionAffix = "a tail turns leftward"
 selectorAffix."cyrl/u" = "turn"
+selectorAffix."cyrl/u/nonCursive" = "turn"
+selectorAffix."cyrl/izhitsa" = ""
 selectorAffix."cyrl/ue" = ""
 
 [prime.cyrl-u.variants-buildup.stages.hook.flat-hook]
@@ -7683,6 +7691,8 @@ rank = 3
 disableIf = [{ body = "NOT cursive" }]
 descriptionAffix = "a flat terminal hook"
 selectorAffix."cyrl/u" = "flatHook"
+selectorAffix."cyrl/u/nonCursive" = ""
+selectorAffix."cyrl/izhitsa" = ""
 selectorAffix."cyrl/ue" = ""
 
 [prime.cyrl-u.variants-buildup.stages.serifs.serifless]
@@ -7690,18 +7700,24 @@ rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/u" = "serifless"
+selectorAffix."cyrl/u/nonCursive" = "serifless"
+selectorAffix."cyrl/izhitsa" = "serifless"
 selectorAffix."cyrl/ue" = "serifless"
 
 [prime.cyrl-u.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs"
 selectorAffix."cyrl/u" = "motionSerifed"
+selectorAffix."cyrl/u/nonCursive" = "motionSerifed"
+selectorAffix."cyrl/izhitsa" = "motionSerifed"
 selectorAffix."cyrl/ue" = "motionSerifed"
 
 [prime.cyrl-u.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/u" = "serifed"
+selectorAffix."cyrl/u/nonCursive" = "serifed"
+selectorAffix."cyrl/izhitsa" = "serifed"
 selectorAffix."cyrl/ue" = "serifed"
 
 
