Add all modified chars to APL variant

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -9266,7 +9266,7 @@ snapshotFeatureApplication = { 'onum' = 1 }
 # This is a special variant selector that controls APL form
 [prime.apl-form]
 isSpecial = true
-hotChars = "∆∇∊○←→↑↓"
+hotChars = "∆∇∊○←→↑↓↕↖↙⥊⇐↩⎉⌜⎊◶⚇◇□△▽◿◹↘⤚⤙↥↧⌵↻⇡◌⬚☇↬↫⋯⌕◫↯⇌⌝⎋◠◡◰◳◴⚂"
 description = "APL form"
 
 [prime.apl-form.variants.none]
