--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "build": "verda -f verdafile.mjs",
-    "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
+    "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && verda -f verdafile.mjs regenerate-code",
     "clean": "verda -f verdafile.mjs clean",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
