--- a/tools/misc/package.json
+++ b/tools/misc/package.json
@@ -6,6 +6,7 @@
     "semver": "^7.7.3",
     "wawoff2": "^2.0.1",
     "@iosevka/util": "33.3.5",
-    "@unicode/unicode-17.0.0": "^1.6.14"
+    "@unicode/unicode-17.0.0": "^1.6.14",
+    "prettier": "^3.6.2"
   }
 }
